# dolphin_engine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  vcpkg.json
cmake/: add_files.cmake  compile_shaders.cmake
shaders/: anyhit.rahit  closesthit.rchit  miss.rmiss  raygen.rgen  shadow.rmiss
shaders/include/: descriptors.glsl  random.glsl  raycommon.glsl  rayutilities.glsl  tonemapping.glsl  utilities.glsl
src/: CMakeLists.txt  engine.cpp  engine.hpp  main.cpp  options.hpp
src/models/: fileloader.cpp  fileloader.hpp  mesh.hpp  modelmanager.cpp  modelmanager.hpp
src/render/: camera.cpp  camera.hpp  mesh.hpp  modelloader.cpp  modelloader.hpp  modelmanager.cpp  modelmanager.hpp  ui.cpp  ui.hpp  vertex.hpp
src/sdl/: window.cpp  window.hpp
src/vulkan/: context.cpp  context.hpp  utils.hpp
src/vulkan/base/: crash_tracker.cpp  crash_tracker.hpp  device.cpp  device.hpp  fence.cpp  fence.hpp  instance.cpp  instance.hpp  physical_device.cpp  physical_device.hpp  queue.cpp  queue.hpp  renderpass.cpp  renderpass.hpp  semaphore.cpp  semaphore.hpp  shader.cpp  shader.hpp  surface.cpp  surface.hpp  swapchain.cpp  swapchain.hpp
src/vulkan/resource/: buffer.cpp  buffer.hpp  image.cpp  image.hpp  scratch_buffer.hpp  stagingbuffer.cpp  stagingbuffer.hpp  storageimage.cpp  storageimage.hpp  texture.cpp  texture.hpp  uniform_data.hpp  vertex.hpp
src/vulkan/rt/: acceleration_structure.cpp  acceleration_structure.hpp  acceleration_structure_builder.cpp  acceleration_structure_builder.hpp  bottom_level_acceleration_structure.cpp  bottom_level_acceleration_structure.hpp  bottom_level_geometry.cpp  bottom_level_geometry.hpp  rt_pipeline.cpp  rt_pipeline.hpp  top_level_acceleration_structure.cpp  top_level_acceleration_structure.hpp
src/vulkan/shaders/: file_includer.cpp  file_includer.hpp  shader.cpp  shader.hpp  shader_database.cpp  shader_database.hpp
